fix: fixed all dark mode style bugs

--- a/src/components/buttons/index.module.scss
+++ b/src/components/buttons/index.module.scss
@@ -15,7 +15,8 @@
 .transpBtn{
     max-width: auto;
     background-color: transparent;
-    border: 1px solid var(--color-black);
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     padding: .6rem 1.5rem;
     border-radius: 3rem;
     font-size: .7rem;
