--- a/src/components/news/news-item/index.module.scss
+++ b/src/components/news/news-item/index.module.scss
@@ -2,7 +2,7 @@
     padding: 1rem 0 3rem;
     display: flex;
     gap: 1rem;
-    border-top: 1px solid var(--color-black);
+    border-top: 1px solid var(--text-color);
 
     &:hover{
         h2{
@@ -30,6 +30,9 @@
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
+            svg{
+                fill: var(--text-color);
+            }
 
             h2{
                 font-size: 2.6rem;
