--- a/src/components/showcase/case/index.module.scss
+++ b/src/components/showcase/case/index.module.scss
@@ -6,6 +6,8 @@
     cursor: pointer;
     // width: 30rem;
     min-width: calc((100vw - var(--padding-sides) - var(--padding-sides) - 3rem) / 3);
+    max-width: calc((100vw - var(--padding-sides) - var(--padding-sides) - 3rem) / 3);
+
     // height: 40rem;
     // gap: 1rem;
     // margin-right: 5rem;
@@ -90,7 +92,9 @@
 
 @media only screen and (max-width: 1279px) {
     .case{
-        width: 43.5vw;
+        min-width: 43.5vw;
+        max-width: 43.5vw;
+
 
         figure, div{
             height: 55vw;
