--- a/src/components/showcase/index.module.scss
+++ b/src/components/showcase/index.module.scss
@@ -3,11 +3,10 @@
     gap: 1rem;
     padding: 0 var(--padding-sides);
     margin-bottom: 9rem;
-    width: auto;
     overflow-x: scroll;
 
     &::-webkit-scrollbar{
-        // display: none;
+        display: none;
     }
 }
 
